setup-scripts/71-jupyterhub/1.5/jupyter15-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: jupyter
  name: jupyter15-vs
  labels:
    app: jupyter15
spec:
  gateways:
  - istio-system/vps2-gateway
  hosts:
  - 'jupyter15.vps2.cluster-1.de'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: proxy-public.jupyter.svc.cluster.local
        port:
          number: 80
